--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react": "^16.13.1",
     "react-css-spinners": "^4.0.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-spring": "^8.0.27",
     "styled-components": "^5.1.1"
   },
