--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^7.1.2",
     "json-loader": "^0.5.7",
     "react": "^16.13.1",
+    "react-compound-timer": "^1.2.0",
     "react-css-spinners": "^4.0.0",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.3",
+    "react-sound": "^1.2.0",
     "react-spring": "^8.0.27",
     "styled-components": "^5.1.1"
   },
