--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-scripts": "^3.4.3",
     "react-sound": "^1.2.0",
     "react-spring": "^8.0.27",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
   },
   "scripts": {
     "start": "react-scripts start",
